Implemented audit trails using vng_api_common
